--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,11 @@ Home
             {{ form.name(class="form-control") }}
         </div>
         <div class="my-2">
+            {{ form.email.label(class="form-label") }}
+            {{ form.email(class="form-control") }}
+        </div>
+
+        <div class="my-2">
             {{ form.submit_btn(class="btn btn-primary") }}
         </div>
 
